# molhub

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/molhub/: __init__.py
src/molhub/dataset/: __init__.py  csv_dataset.py  protocol.py  qm9.py  revmd17.py  threebpa.py
src/molhub/uploader/: __init__.py  figshare.py  huggingface.py
tests/: __init__.py  test_csv_dataset.py  test_protocol.py  test_threebpa.py  test_uploader.py
